--- a/docs/guides/error-mitigation-and-suppression-techniques.ipynb
+++ b/docs/guides/error-mitigation-and-suppression-techniques.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "In the presence of readout error, measurement twirling has the effect of diagonalizing the readout-error transfer matrix, making it easy to invert. Estimating the readout-error transfer matrix requires executing additional calibration circuits, which introduces a small overhead.\n",
     "\n",
-    "TREX can be enabled by setting `measure_mitigation` to `True` in the [Qiskit Runtime resilience options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for V2 Estimator. Options for measurement noise learning are described [here](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.MeasureNoiseLearningOptions). As with gate twirling, you can set the number of circuit randomizations and the number of shots per randomization.\n",
+    "TREX can be enabled by setting `measure_mitigation` to `True` in the [Qiskit Runtime resilience options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for Estimator. Options for measurement noise learning are described [here](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.MeasureNoiseLearningOptions). As with gate twirling, you can set the number of circuit randomizations and the number of shots per randomization.\n",
     "\n",
     "The following code cell shows how to enable TREX and set these options for the estimator. None of these options are required to be set explicitly."
    ]
@@ -185,7 +185,7 @@
     "\n",
     "![Depiction of ZNE](/images/guides/error-mitigation-explanation/zne.png)\n",
     "\n",
-    "ZNE can be enabled by setting `zne_mitigation` to `True` in the [Qiskit Runtime resilience options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for V2 Estimator.\n",
+    "ZNE can be enabled by setting `zne_mitigation` to `True` in the [Qiskit Runtime resilience options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for Estimator.\n",
     "The Qiskit Runtime options for ZNE are described [here](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ZneOptions). The following options are notable:\n",
     "\n",
     "- `noise_factors`: The noise factors to use for noise amplification.\n",
@@ -230,7 +230,7 @@
     "\n",
     "The sampling overhead is a multiplicative factor on the number of shots required to estimate an expectation value to a given precision, compared to the number of shots that would be needed from the ideal circuit. It scales quadratically with $\\gamma$, which in turn scales exponentially with the depth of the circuit.\n",
     "\n",
-    "PEC can be enabled by setting `pec_mitigation` to `True` in the [Qiskit Runtime resilience options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for V2 Estimator.\n",
+    "PEC can be enabled by setting `pec_mitigation` to `True` in the [Qiskit Runtime resilience options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2) for Estimator.\n",
     "The Qiskit Runtime options for PEC are described [here](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.PecOptions). A limit on the sampling overhead can be set using the `max_overhead` option. Note that limiting the sampling overhead can cause the precision of the result to exceed the requested precision. The default value of `max_overhead` is 100.\n",
     "\n",
     "The following code cell shows how to enable PEC and set the `max_overhead` option for the estimator."
