--- a/docs/api/qiskit-transpiler-service/0.3/qiskit_transpiler_service.ai.AICliffordSynthesis.mdx
+++ b/docs/api/qiskit-transpiler-service/0.3/qiskit_transpiler_service.ai.AICliffordSynthesis.mdx
@@ -1,21 +1,21 @@
 ---
-title: AIPermutationSynthesis
-description: API reference for qiskit_transpiler_service.ai.AIPermutationSynthesis
+title: AICliffordSynthesis
+description: API reference for qiskit_transpiler_service.ai.AICliffordSynthesis
 in_page_toc_min_heading_level: 1
 python_api_type: class
-python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
+python_api_name: qiskit_transpiler_service.ai.AICliffordSynthesis
 ---
 
-# AIPermutationSynthesis
+# AICliffordSynthesis
 
-<Class id="qiskit_transpiler_service.ai.AIPermutationSynthesis" isDedicatedPage={true} signature="qiskit_transpiler_service.ai.AIPermutationSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
+<Class id="qiskit_transpiler_service.ai.AICliffordSynthesis" isDedicatedPage={true} signature="qiskit_transpiler_service.ai.AICliffordSynthesis(backend_name: str, replace_only_if_better: bool = True, max_threads: int | None = None)" modifiers="class">
   Bases: `AISynthesis`
 
-  Synthesis for Permutation circuits (blocks of SWAP gates). Currently available for 65, 33, and 27 qubit blocks.
+  Synthesis for Clifford circuits (blocks of H, S and CX gates). Currently up to 9 qubit blocks.
 
   **Parameters**
 
-  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – Name of the backend used for doing the AI Linear Function synthesis.
+  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")) – Name of the backend used for doing the AI Clifford synthesis.
   *   **replace\_only\_if\_better** ([*bool*](https://docs.python.org/3/library/functions.html#bool "(in Python v3.12)")*, optional*) – Determine if replace the original circuit with the synthesized one if it’s better, defaults to True.
   *   **max\_threads** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")*, optional*) – Set the number of requests to send in parallel.
 
@@ -23,7 +23,7 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
 
   ### execute
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
+  <Function id="qiskit_transpiler_service.ai.AICliffordSynthesis.execute" signature="execute(passmanager_ir, state, callback=None)">
     Execute optimization task for input Qiskit IR.
 
     **Parameters**
@@ -43,7 +43,7 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
 
   ### name
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.name" signature="name()">
+  <Function id="qiskit_transpiler_service.ai.AICliffordSynthesis.name" signature="name()">
     Name of the pass.
 
     **Return type**
@@ -53,7 +53,7 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
 
   ### run
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.run" signature="run(dag)">
+  <Function id="qiskit_transpiler_service.ai.AICliffordSynthesis.run" signature="run(dag)">
     Run a pass on the DAGCircuit. This is implemented by the pass developer.
 
     **Parameters**
@@ -65,13 +65,13 @@ python_api_name: qiskit_transpiler_service.ai.AIPermutationSynthesis
     [**NotImplementedError**](https://docs.python.org/3/library/exceptions.html#NotImplementedError "(in Python v3.12)") – when this is left unimplemented for a pass.
   </Function>
 
-  ### synth\_nodes
+  ### synth\_node
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.synth_nodes" signature="synth_nodes(nodes)" />
+  <Function id="qiskit_transpiler_service.ai.AICliffordSynthesis.synth_node" signature="synth_node(node)" />
 
   ### update\_status
 
-  <Function id="qiskit_transpiler_service.ai.AIPermutationSynthesis.update_status" signature="update_status(state, run_state)">
+  <Function id="qiskit_transpiler_service.ai.AICliffordSynthesis.update_status" signature="update_status(state, run_state)">
     Update workflow status.
 
     **Parameters**
