--- a/docs/api/qiskit-transpiler-service/0.3/utils.mdx
+++ b/docs/api/qiskit-transpiler-service/0.3/utils.mdx
@@ -42,6 +42,6 @@ python_api_name: qiskit_transpiler_service.utils
 
   **Return type**
 
-  [*Dict*](https://docs.python.org/3/library/typing.html#typing.Dict "(in Python v3.12)")\[[str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)"), [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")]
+  [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")\[[str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)"), [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")]
 </Function>
 
