--- a/docs/api/qiskit-transpiler-service/qiskit_transpiler_service.ai.AICliffordSynthesis.mdx
+++ b/docs/api/qiskit-transpiler-service/qiskit_transpiler_service.ai.AICliffordSynthesis.mdx
@@ -65,9 +65,9 @@ python_api_name: qiskit_transpiler_service.ai.AICliffordSynthesis
     [**NotImplementedError**](https://docs.python.org/3/library/exceptions.html#NotImplementedError "(in Python v3.12)") – when this is left unimplemented for a pass.
   </Function>
 
-  ### synth\_node
+  ### synth\_nodes
 
-  <Function id="qiskit_transpiler_service.ai.AICliffordSynthesis.synth_node" signature="synth_node(node)" />
+  <Function id="qiskit_transpiler_service.ai.AICliffordSynthesis.synth_nodes" signature="synth_nodes(nodes)" />
 
   ### update\_status
 
